ingress/ingress.definition.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-war-watch
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /wear
            pathType: Prefix
            backend:
              service:
                name: wear-service
                port:
                  number: 80
